# plyra-guard

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  autogen_out.txt  guard_config.example.yaml  index.html  output.txt  output3.txt  output_utf8.txt  pyproject.toml  ruff_out.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
api/action-guard/: index.html
api/adapters/: index.html
api/policy/: index.html
docs/: adapters.md  api_reference.md  architecture.md  multiagent_guide.md  policy_reference.md  quickstart.md  requirements-docs.txt  rollback_guide.md
examples/: async_agent.py  autogen_integration.py  autogen_out.txt  crewai_integration.py  langchain_integration.py  langgraph_integration.py  multiagent_orchestrator.py  sidecar_usage.py  single_agent_basic.py  single_agent_with_policies.py
getting-started/concepts/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/dashboard/: index.html
guides/policy-config/: index.html
integrations/: index.html
integrations/autogen/: index.html
integrations/crewai/: index.html
integrations/langgraph/: index.html
overrides/: main.html
plyra/: __init__.py
plyra-docs/: mkdocs.yml
plyra-docs/.github/workflows/: docs.yml
plyra-docs/docs/: index.md
plyra/guard/: __init__.py
plyra_guard/: __init__.py  __main__.py  cli.py
plyra_guard-0.1.0/plyra_guard/: exceptions.py
plyra_guard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
plyra_guard/adapters/: __init__.py  anthropic_adapter.py  autogen_adapter.py  base.py  crewai_adapter.py  generic_adapter.py  langchain_adapter.py  llamaindex_adapter.py  openai_adapter.py  registry.py
plyra_guard/config/: __init__.py  defaults.py  loader.py  schema.py
plyra_guard/core/: __init__.py  dx.py  execution_gate.py  guard.py  intent.py  interceptor.py  verdict.py
plyra_guard/dashboard/: __init__.py  metrics.py  router.py  sse.py
plyra_guard/evaluators/: __init__.py  base.py  cost_estimator.py  human_gate.py  policy_engine.py  rate_limiter.py  risk_scorer.py  schema_validator.py
plyra_guard/multiagent/: __init__.py  cascade_controller.py  global_budgeter.py  instruction_chain.py  trust_ledger.py
plyra_guard/observability/: __init__.py  audit_log.py  metrics.py
plyra_guard/rollback/: __init__.py  registry.py  snapshot_manager.py
plyra_guard/sidecar/: __init__.py  app.py  models.py  routes.py  server.py
search/: search_index.json
tests/: conftest.py
tests/integration/: test_async_pipeline.py  test_dashboard.py  test_full_pipeline.py  test_multiagent_flow.py  test_sidecar.py
tests/real_world/: conftest.py  test_filesystem_ops.py  test_langchain_agent.py  test_sidecar_subprocess.py  test_sqlite_ops.py
tests/unit/: test_adapters.py  test_cascade_controller.py  test_dx_improvements.py  test_intent.py  test_policy_engine.py  test_policy_engine_extended.py  test_rate_limiter.py  test_risk_scorer.py  test_rollback.py  test_trust_ledger.py
(+32 files in other folders)
